# LogAnalyzer

./: .gitignore  CMakeLists.txt  compile.sh
data/: clf_example.txt  random_logs_1.txt  syslog_example.txt
include/loggenerator/: LogGenerator.hpp
include/loggenerator/handler/: LogHandler.hpp  TextLogHandler.hpp
include/utils/exception/: FileImportError.hpp  ParsingError.hpp  UnsupportedFormatError.hpp
src/: LogGenerator.cpp  main.cpp
src/handler/: LogHandler.cpp  TextLogHandler.cpp
